--- a/codesamples/day06poc/doubt.html
+++ b/codesamples/day06poc/doubt.html
@@ -56,8 +56,8 @@
             console.log("reading from sessionstroage",JSON.parse(x));
         }
 
-       // check();
-        check2();
+        check();
+       // check2();
 
 
 
