--- a/codesamples/day07cssbasics/a12poc/postlogin1.html
+++ b/codesamples/day07cssbasics/a12poc/postlogin1.html
@@ -145,6 +145,19 @@
         <div class="results" id="results">
             <!-- Search results will be displayed here -->
         </div>
+
+        <div class="results">
+            <A href="add.html"> adding of numbers</A>
+        </div>
+        <div class="results">
+            <A href="problemstatement1.html"> Problem statement 1</A>
+        </div>
+
+
+
+
+
+
     </div>
 
     <footer>
