--- a/codesamples/day08cssrevision/a01poc/basic.html
+++ b/codesamples/day08cssrevision/a01poc/basic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manufacturing Company</title>
-    <link rel="stylesheet" href="poc.css">
+    <link rel="stylesheet" href="basic.css">
 </head>
 <body>
 
